sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:19: error: not found: value red
			swap(i,red);
                               ^DutchFlagAlgo:20: error: not found: value red
      red += 1;
      ^