sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  
  var blue=0;
  var blanc=0;
  var rouge=0;
  
  for(i<-0 to getSize()/2-1){
    
    if(getColor(i)==BLUE){
			swap(i,blue);
      blue += 1;
    }
    if(getColor(i)==WHITE){
			swap(i,blanc);
      blanc += 1;
    }
    if(getColor(i)==RED){
			swap(i,red);
      red += 1;
    }
    
  }

}